# advent-of-code-2022

./: Cargo.toml  README.md
data/puzzles/: 01.md  02.md  03.md  04.md  05.md  07.md  08.md  09.md  10.md  11.md  12.md  13.md  14.md  16.md  17.md  18.md  19.md  20.md  21.md
src/: lib.rs
src/template/: mod.rs
