[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Foxwhite25 <vct.xie@gmail.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5.0"
itertools = "0.10.5"
hashbrown = "0.13.1"
num = "0.4.0"